--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,10 @@ main {
     margin: 0 auto;
 }
 
+.ftext {
+    font-family: 'Roboto', sans-serif;
+}
+
 /* ****---> header <---**** */
 
 .header_banner {
